--- a/src/app/pages/ncs/about/view-nc/products-and-points/view-products-and-points.component.html
+++ b/src/app/pages/ncs/about/view-nc/products-and-points/view-products-and-points.component.html
@@ -1,43 +1,50 @@
 <div class="div-ident-parceiro row">
-  <h1 class="titulo-parceiro">{{'newNC.step1.product.title'| translate}}</h1>
-  <div class="dados-parceiro col razao-social">
+  <h1 class="titulo-parceiro">{{ "newNC.step1.product.title" | translate }}</h1>
+  <div class="dados-produto col razao-social">
     <div class="d-flex">
+     
       <h2 class="mr-2">
-        {{aboutSrvc.nc?.product?.description}}
+        {{ aboutSrvc.nc?.product?.description }}
       </h2>
       <p-chip>
         <i class="bi bi-ticket-perforated mr-2"></i>
-        {{aboutSrvc.nc?.product?.code||"000000"}}
+        {{ aboutSrvc.nc?.product?.code || "000000" }}
       </p-chip>
     </div>
     <p class="d-block">
-      {{aboutSrvc.nc?.product?.name}}
+      {{ aboutSrvc.nc?.product?.name }}
     </p>
   </div>
-  <div class="dados-parceiro col">
-    <div class="dados-contato">
+  <div class="dados-produto col">
+    <div class="d-flex flex-row justify-content-around">
       <div class="contato-info d-flex flex-row">
         <i class="bi bi-calculator"></i>
         <div>
-          <span class="info-titulo">{{'newNC.step1.product.amount'| translate}}</span>
+          <span class="info-titulo">{{
+            "newNC.step1.product.amount" | translate
+          }}</span>
           <br />
-          <span class="info-dados">{{aboutSrvc.nc?.quant_total||"0"}}</span>
+          <span class="info-dados">{{ aboutSrvc.nc?.quant_total || "0" }}</span>
         </div>
       </div>
       <div class="contato-info d-flex flex-row">
         <i class="bi bi-calculator"></i>
         <div>
-          <span class="info-titulo">{{'newNC.step1.product.amountNC'| translate}}</span>
+          <span class="info-titulo">{{
+            "newNC.step1.product.amountNC" | translate
+          }}</span>
           <br />
-          <span class="info-dados">{{aboutSrvc.nc?.quant_nc||"0"}}</span>
+          <span class="info-dados">{{ aboutSrvc.nc?.quant_nc || "0" }}</span>
         </div>
       </div>
       <div class="contato-info d-flex flex-row">
         <i class="bi bi-percent"></i>
         <div>
-          <span class="info-titulo">{{'newNC.step1.product.percent'| translate}}</span>
+          <span class="info-titulo">{{
+            "newNC.step1.product.percent" | translate
+          }}</span>
           <br />
-          <span class="info-dados">{{getPercent()||"0"}}%</span>
+          <span class="info-dados">{{ getPercent() || "0" }}%</span>
         </div>
       </div>
     </div>
@@ -46,27 +53,58 @@
 <div class="div-ident-parceiro mt-3">
   <h2>
     <i class="bi bi-people"></i>
-    {{'newNC.review.checkpoint'| translate}}
+    {{ "newNC.review.checkpoint" | translate }}
   </h2>
-  <div class="d-flex">
-    <div class="col-6 d-flex flex-row">
+  <div class="d-flex flex-column">
+    <div class="d-flex flex-row">
       <i class="pi pi-directions mr-1"></i>
       <div>
         <span class="info-titulo">{{
-          aboutSrvc.nc?.tipo_controle || 'global.empty'| translate
+          aboutSrvc.nc?.tipo_controle || "global.empty" | translate
+        }}</span>
+        <div class="d-flex flex-row mt-2">
+          <span class="info-dados">{{
+            aboutSrvc.nc?.procedure?.code || "0"
           }}</span>
+
+          <span class="info-dados ml-3">{{
+            aboutSrvc.nc?.procedure?.description || "0"
+          }}</span>
+
+          <span class="info-dados ml-3">{{
+            aboutSrvc.nc?.procedure?.rev || "0"
+          }}</span>
+        </div>
       </div>
     </div>
-    <div class="d-flex flex-row" *ngIf="aboutSrvc.nc?.tipo_controle!='PR'">
-      <i class="bi bi-calculator mr-1"></i>
-      <div >
-        <span class="info-titulo">{{'global.number'| translate}}</span>
-        <br />
-        <p class="info-dados">
-          {{
-          (aboutSrvc.nc?.num_op || aboutSrvc.nc?.num_nota)|| "Dado não preenchido"
-          }}
-        </p>
+    <div
+      class="dados-parceiro razao-social item mt-3"
+      *ngIf="returnFile('pontoControle').length > 0"
+    >
+      <h2 class="mr-2 mb-5">
+        <i class="bi bi-paperclip"></i>
+        {{ "global.fileInput.attachments" | translate }}
+      </h2>
+      <div *ngIf="!aboutSrvc.displayPdf">
+        <p-carousel
+          [value]="returnFile('pontoControle')"
+          [numVisible]="3"
+          [numScroll]="3"
+          [showIndicators]="false"
+        >
+          <ng-template let-file pTemplate="item">
+            <i class="bi bi-file-earmark fs-1"></i>
+            <p>{{ file.name }}</p>
+          </ng-template>
+        </p-carousel>
+      </div>
+
+      <div *ngIf="aboutSrvc.displayPdf">
+        <div class="d-flex flex-row flex-wrap">
+          <div *ngFor="let item of returnFile('pontoControle')">
+            {{ item.name + " /" }}
+          </div>
+        </div>
       </div>
     </div>
   </div>
@@ -74,55 +112,66 @@
 <div class="div-ident-parceiro pr-4 mt-3">
   <h2>
     <i class="bi bi-people"></i>
-    {{'newNC.step1.rejectionPoint.title'| translate}}
+    {{ "newNC.step1.rejectionPoint.title" | translate }}
   </h2>
-  <div class="d-flex dados-contato mb-3 ">
-    <div class="contato-info d-flex flex-row mb-5 mr-5" *ngIf="aboutSrvc.nc?.num_lote">
+  <div class="d-flex dados-contato mb-3">
+    <div
+      class="contato-info d-flex flex-row mb-5 mr-5"
+      *ngIf="aboutSrvc.nc?.num_lote"
+    >
       <i class="bi bi-file-earmark-text"></i>
       <div>
-        <span class="info-titulo">{{'newNC.step1.rejectionPoint.numBatch'| translate}}</span>
+        <span class="info-titulo">{{
+          "newNC.step1.rejectionPoint.numBatch" | translate
+        }}</span>
         <br />
-        <span class="info-dados">{{
-          aboutSrvc.nc?.num_lote || "0"
-          }}</span>
+        <span class="info-dados">{{ aboutSrvc.nc?.num_lote || "0" }}</span>
       </div>
     </div>
-    <div class="contato-info d-flex flex-row mb-5 mr-5" *ngIf="aboutSrvc.nc?.num_ordem_compra">
+    <div
+      class="contato-info d-flex flex-row mb-5 mr-5"
+      *ngIf="aboutSrvc.nc?.num_ordem_compra"
+    >
       <i class="bi bi-file-earmark-text"></i>
       <div>
-        <span class="info-titulo">{{'newNC.step1.rejectionPoint.numOC'| translate}}</span>
+        <span class="info-titulo">{{
+          "newNC.step1.rejectionPoint.numOC" | translate
+        }}</span>
         <br />
         <span class="info-dados">{{
           aboutSrvc.nc?.num_ordem_compra || "0"
-          }}</span>
+        }}</span>
       </div>
     </div>
-    <div class="contato-info d-flex flex-row mb-5 mr-5" *ngIf="aboutSrvc.nc?.instruction?.code">
+    <div
+      class="contato-info d-flex flex-row mb-3 mr-5"
+      *ngIf="aboutSrvc.nc?.instruction?.code"
+    >
       <i class="bi bi-file-earmark-text"></i>
       <div>
         <span class="info-titulo">IT</span>
         <br />
-        <span class="info-dados">{{ ('global.number'| translate) + ": " + aboutSrvc.nc?.instruction?.code || "0" }}</span>
-        <br />
-        <span class="info-dados">{{ ('global.description'| translate) + ": " + aboutSrvc.nc?.instruction?.description || "0" }}</span>
-        <br />
-        <span class="info-dados">{{ ('global.revision'| translate) + ": "+ aboutSrvc.nc?.instruction?.rev || "0" }}</span>
-      </div>
-    </div>
-    <div class="contato-info d-flex flex-row mb-5 mr-5" *ngIf="aboutSrvc.nc?.procedure">
-      <i class="bi bi-file-earmark-text"></i>
-      <div>
-        <span class="info-titulo">PR</span>
-        <br />
-        <span class="info-dados">{{ aboutSrvc.nc?.procedure?.code|| "0" }}</span>
+        <div class="d-flex flex-row mt-2">
+          <span class="info-dados">{{
+            aboutSrvc.nc?.instruction?.code || "0"
+          }}</span>
+
+          <span class="info-dados ml-3">{{
+            aboutSrvc.nc?.instruction?.description || "0"
+          }}</span>
+
+          <span class="info-dados ml-3">{{
+            aboutSrvc.nc?.instruction?.rev || "0"
+          }}</span>
+        </div>
       </div>
     </div>
   </div>
   <div class="dados-parceiro col razao-social">
     <p-editor
-            [ngModel]="aboutSrvc.nc?.text_area_reject_point"
-            [style]="{ height: '100%', border: '0px solid #dddddd'}"
-            [readonly]="true"
+      [ngModel]="aboutSrvc.nc?.text_area_reject_point"
+      [style]="{ height: '100%', border: '0px solid #dddddd' }"
+      [readonly]="true"
     >
       <ng-template pTemplate="header" hidden> </ng-template>
     </p-editor>
