--- a/src/app/pages/ncs/create/steps/step4/identify-nc/identify-nc.component.html
+++ b/src/app/pages/ncs/create/steps/step4/identify-nc/identify-nc.component.html
@@ -73,7 +73,7 @@
   </div>
 </div>
 <div class="div-ident-parceiro mt-3">
-  <h1 class="titulo-parceiro">{{'newNC.step1.partner.title'| translate}}</h1>
+  <h1 >{{'newNC.step1.partner.title'| translate}}</h1>
   <div class="d-flex">
     <div class="item">
       <div class="dados-parceiro razao-social">
@@ -95,8 +95,8 @@
     </div>
     <div class="item">
       <div class="dados-parceiro">
-        <div class="dados-contato">
-          <h1>{{'newNC.step1.partner.contactTitle'| translate}}</h1>
+        <div class="razao-social">
+          <h2>{{'newNC.step1.partner.contactTitle'| translate}}</h2>
           <div></div>
           <div class="contato-info d-flex flex-row">
             <i class="pi pi-user"></i>
