--- a/src/app/pages/ncs/about/about.component.html
+++ b/src/app/pages/ncs/about/about.component.html
@@ -11,7 +11,7 @@
   </p-tabPanel>
 
   <p-tabPanel
-    [disabled]="checkDisableProposal()"
+    [disabled]=""
     [header]="'about.proposal' | translate"
     leftIcon="bi bi-tools"
   >
