--- a/src/app/pages/ncs/about/view-nc/identify-nc/view-identify-n-c.component.html
+++ b/src/app/pages/ncs/about/view-nc/identify-nc/view-identify-n-c.component.html
@@ -2,36 +2,38 @@
   <div class="div-ident-parceiro">
     <h2>
       <i class="bi bi-card-text"></i>
-      {{'newNC.review.identification'| translate}}
+      {{ "newNC.review.identification" | translate }}
     </h2>
     <div class="d-flex justify-content-between flex-column flex-lg-row">
       <div class="contato-info d-flex flex-row">
         <i class="bi bi-ticket-perforated mr-1"></i>
         <div>
-          <span class="info-titulo">{{'global.number'| translate}}</span>
+          <span class="info-titulo">{{ "global.number" | translate }}</span>
           <br />
-          <span class="info-dados">{{aboutSrvc.nc?.code||""}}</span>
+          <span class="info-dados">{{ aboutSrvc.nc?.code || "" }}</span>
         </div>
       </div>
       <div class="contato-info d-flex flex-row">
         <i class="bi bi-calendar-week mr-1"></i>
         <div>
-          <span class="info-titulo">{{'newNC.step1.identifyNC.dateOpen'| translate}}</span>
+          <span class="info-titulo">{{
+            "newNC.step1.identifyNC.dateOpen" | translate
+          }}</span>
           <br />
           <span class="info-dados">
-            {{formato_brasileiro(aboutSrvc.nc?.data_abertura)}}
-
+            {{ formato_brasileiro(aboutSrvc.nc?.data_abertura) }}
           </span>
         </div>
       </div>
       <div class="contato-info d-flex flex-row">
         <i class="bi bi-calendar-week mr-1"></i>
         <div>
-          <span class="info-titulo">{{'newNC.step1.identifyNC.dateClose'| translate}}</span>
-          <br/>
+          <span class="info-titulo">{{
+            "newNC.step1.identifyNC.dateClose" | translate
+          }}</span>
+          <br />
           <span class="info-dados">
-            {{formato_brasileiro(aboutSrvc.nc?.data_fechamento)}}
-
+            {{ formato_brasileiro(aboutSrvc.nc?.data_fechamento) }}
           </span>
         </div>
       </div>
@@ -41,96 +43,132 @@
   <div class="div-ident-parceiro">
     <h2>
       <i class="bi bi-people mr-1"></i>
-      {{'newNC.review.emission'| translate}}
+      {{ "newNC.review.emission" | translate }}
     </h2>
     <div class="d-flex justify-content-between flex-column flex-lg-row">
       <div class="contato-info d-flex flex-row">
         <i class="bi bi-person-circle mr-1"></i>
         <div>
-          <span class="info-titulo">{{'newNC.review.issuer'| translate}}</span>
-          <br/>
-          <span class="info-dados">{{aboutSrvc.nc?.emissor?.username||"não preenchido"}}</span>
+          <span class="info-titulo">{{
+            "newNC.review.issuer" | translate
+          }}</span>
+          <br />
+          <span class="info-dados">{{
+            aboutSrvc.nc?.emissor?.username || "não preenchido"
+          }}</span>
         </div>
       </div>
       <div class="contato-info d-flex flex-row">
         <i class="bi bi-person-circle mr-1"></i>
         <div>
-          <span class="info-titulo">{{'newNC.review.responsible'| translate}}</span>
-          <br/>
-          <span class="info-dados">{{aboutSrvc.nc?.emissor?.sector?.responsible_name||"não preenchido"}}</span>
+          <span class="info-titulo">{{
+            "newNC.review.responsible" | translate
+          }}</span>
+          <br />
+          <span class="info-dados">{{
+            aboutSrvc.nc?.emissor?.sector?.responsible_name || "não preenchido"
+          }}</span>
         </div>
       </div>
       <div class="contato-info d-flex flex-row">
         <i class="bi bi-geo-alt mr-1"></i>
         <div>
-          <span class="info-titulo">{{'newNC.review.department'| translate}}</span>
-          <br>
-          <p class="info-dados">{{aboutSrvc.nc?.emissor?.sector?.name||"não preenchido"}}</p>
+          <span class="info-titulo">{{
+            "newNC.review.department" | translate
+          }}</span>
+          <br />
+          <p class="info-dados">
+            {{ aboutSrvc.nc?.emissor?.sector?.name || "não preenchido" }}
+          </p>
         </div>
       </div>
     </div>
   </div>
 </div>
 <div class="div-ident-parceiro mt-3">
-  <h1 class="titulo-parceiro">{{'newNC.step1.partner.title'| translate}}</h1>
-  <div class="d-flex flex-wrap">
+  <h1 class="titulo-parceiro">{{ "newNC.step1.partner.title" | translate }}</h1>
+  <div class="d-flex">
     <div class="item">
       <div class="dados-parceiro razao-social">
         <div class="d-flex">
-          <h2 class="mr-2">{{returnTitle()}}</h2>
+          <h2 class="mr-2">{{ returnTitle() }}</h2>
           <p-chip>
             <i class="bi bi-ticket-perforated mr-2"></i>
-            {{ (aboutSrvc.nc?.customer?.code||aboutSrvc.nc?.provider?.code)||"00000000" }}
+            {{
+              aboutSrvc.nc?.customer?.code ||
+                aboutSrvc.nc?.provider?.code ||
+                "00000000"
+            }}
           </p-chip>
         </div>
         <p>
-          {{(aboutSrvc.nc?.customer?.corporate_name||aboutSrvc.nc?.provider?.corporate_name||aboutSrvc.nc?.sector?.name)
-        ||'global.fileInput.empty'| translate}}
+          {{
+            aboutSrvc.nc?.customer?.corporate_name ||
+              aboutSrvc.nc?.provider?.corporate_name ||
+              aboutSrvc.nc?.sector?.name ||
+              "global.fileInput.empty" | translate
+          }}
         </p>
       </div>
     </div>
     <div class="item">
-      <div class="dados-parceiro">
-        <div class="dados-contato">
-          <h1>{{'newNC.step1.partner.contactTitle'| translate}}</h1>
-          <div></div>
-          <div class="contato-info d-flex flex-row">
-            <i class="pi pi-user"></i>
-            <div>
-              <span class="info-titulo">{{'global.contacts.name'| translate}}</span>
-              <br />
-              <span class="info-dados">
-                {{(aboutSrvc.nc?.customer?.responsible_name||aboutSrvc.nc?.provider?.responsible_name||aboutSrvc.nc?.sector?.responsible_name)
-              ||'global.fileInput.empty'| translate}}
-              </span>
-            </div>
+      <div class="dados-parceiro razao-social">
+        <h2>
+          {{ "newNC.step1.partner.contactTitle" | translate }}
+        </h2>
+        <div></div>
+        <div class="contato-info d-flex flex-row">
+          <i class="pi pi-user"></i>
+          <div>
+            <span class="info-titulo">{{
+              "global.contacts.name" | translate
+            }}</span>
+            <br />
+            <span class="info-dados">
+              {{
+                aboutSrvc.nc?.customer?.responsible_name ||
+                  aboutSrvc.nc?.provider?.responsible_name ||
+                  aboutSrvc.nc?.sector?.responsible_name ||
+                  "global.fileInput.empty" | translate
+              }}
+            </span>
           </div>
-          <div class="contato-info d-flex flex-row">
-            <i class="pi pi-phone"></i>
-            <div>
-              <span class="info-titulo">{{'newNC.step1.partner.phone'| translate}}</span>
-              <br />
-              <span class="info-dados">
-                {{(aboutSrvc.nc?.customer?.responsible_phone||aboutSrvc.nc?.provider?.responsible_phone||aboutSrvc.nc?.sector?.responsible_phone)
-              ||"(00) 00000-0000"}}
-              </span>
-            </div>
+        </div>
+        <div class="contato-info d-flex flex-row">
+          <i class="pi pi-phone"></i>
+          <div>
+            <span class="info-titulo">{{
+              "newNC.step1.partner.phone" | translate
+            }}</span>
+            <br />
+            <span class="info-dados">
+              {{
+                aboutSrvc.nc?.customer?.responsible_phone ||
+                  aboutSrvc.nc?.provider?.responsible_phone ||
+                  aboutSrvc.nc?.sector?.responsible_phone ||
+                  "(00) 00000-0000"
+              }}
+            </span>
           </div>
-          <div class="contato-info d-flex flex-row">
-            <i class="pi pi-at"></i>
-            <div>
-              <span class="info-titulo">{{'global.contacts.email'| translate}}</span>
-              <br />
-              <span class="info-dados">
-                {{(aboutSrvc.nc?.customer?.responsible_email||aboutSrvc.nc?.provider?.responsible_email||aboutSrvc.nc?.sector?.responsible_email)
-              ||'global.fileInput.empty'| translate}}
-              </span>
-            </div>
+        </div>
+        <div class="contato-info d-flex flex-row">
+          <i class="pi pi-at"></i>
+          <div>
+            <span class="info-titulo">{{
+              "global.contacts.email" | translate
+            }}</span>
+            <br />
+            <span class="info-dados">
+              {{
+                aboutSrvc.nc?.customer?.responsible_email ||
+                  aboutSrvc.nc?.provider?.responsible_email ||
+                  aboutSrvc.nc?.sector?.responsible_email ||
+                  "global.fileInput.empty" | translate
+              }}
+            </span>
           </div>
         </div>
       </div>
     </div>
   </div>
 </div>
-
-
