--- a/src/app/pages/ncs/about/view-nc/view-nc.component.html
+++ b/src/app/pages/ncs/about/view-nc/view-nc.component.html
@@ -1,11 +1,14 @@
-<app-gerar-pdf-view *ngIf="aboutSrvc.displayPdf" id="pdfContent"></app-gerar-pdf-view>
-<div class="d-flex flex-lg-row flex-column justify-content-between" >
+<app-gerar-pdf-view
+  *ngIf="aboutSrvc.displayPdf"
+  id="pdfContent"
+></app-gerar-pdf-view>
+<div class="d-flex flex-lg-row flex-column justify-content-between">
   <div class="d-flex">
     <div class="cabecalho">
       <div class="d-flex align-items-center">
-        <h1 class="mr-3">{{'about.ncView.title'| translate}}</h1>
+        <h1 class="mr-3">{{ "about.ncView.title" | translate }}</h1>
       </div>
-      <p>{{'about.ncView.subtitle'| translate}}</p>
+      <p>{{ "about.ncView.subtitle" | translate }}</p>
     </div>
   </div>
   <div class="d-flex justify-content-end align-items-center mb-3">
@@ -15,7 +18,7 @@
       (click)="isAllOpen = true"
     >
       <i class="bi bi-arrows-expand"></i>
-      {{'global.expand'| translate}}
+      {{ "global.expand" | translate }}
     </button>
     <button
       [class]="isAllOpen ? unselectedClass : selectedClass"
@@ -23,21 +26,21 @@
       class="btn-sm"
     >
       <i class="bi bi-arrows-collapse"></i>
-      {{'global.colapse'| translate}}
+      {{ "global.colapse" | translate }}
     </button>
     <button class="btn btn-dark btn-sm ml-2">
-      {{'about.ncView.editBtn'| translate}}
+      {{ "about.ncView.editBtn" | translate }}
       <i class="bi bi-pencil-square"></i>
     </button>
   </div>
 </div>
-<p-accordion [multiple]="true" >
+<p-accordion [multiple]="true">
   <p-accordionTab [selected]="isAllOpen">
     <ng-template pTemplate="header">
       <div class="d-flex justify-content-between accordion">
         <p>
           <i class="bi bi-file-earmark-text"></i>
-          {{'global.ncData'| translate}}
+          {{ "global.ncData" | translate }}
         </p>
       </div>
     </ng-template>
@@ -52,7 +55,7 @@
       <div class="d-flex justify-content-between accordion">
         <p>
           <i class="bi bi-box-seam"></i>
-          {{'global.description'| translate}}
+          {{ "global.description" | translate }}
         </p>
       </div>
     </ng-template>
@@ -61,10 +64,14 @@
         <div class="dados-parceiro razao-social item">
           <h2 class="mr-2">
             <i class="bi bi-file-earmark-text"></i>
-            {{'about.ncView.description'| translate}}
+            {{ "about.ncView.description" | translate }}
           </h2>
           <p-editor
-            [style]="{ height: '144px', border: '1px solid #dddddd', 'font-size': '20px' }"
+            [style]="{
+              height: '144px',
+              border: '1px solid #dddddd',
+              'font-size': '20px'
+            }"
             [readonly]="true"
             [ngModel]="aboutSrvc.nc?.text_area_nc"
           >
@@ -74,7 +81,7 @@
         <div class="dados-parceiro razao-social item">
           <h2 class="mr-2 mb-5">
             <i class="pi pi-camera"></i>
-            {{'newNC.review.evidence'| translate}}
+            {{ "newNC.review.evidence" | translate }}
           </h2>
           <p-carousel
             [value]="this.aboutSrvc.nc?.attachments?.filter(isType1) || []"
@@ -93,31 +100,43 @@
       </div>
 
       <div class="div-ident-parceiro d-flex flex-wrap mt-3">
-  <div class="dados-parceiro razao-social item">
-    <h2 class="mr-2">
-      <i class="bi bi-geo"></i>
-      {{'newNC.step2.actionsTitle'| translate}}
-    </h2>
-    <p-editor [style]="{'height':'144px', border: '1px solid #dddddd', 'font-size': '20px' }" [readonly]="true" [ngModel]="aboutSrvc.nc?.text_area_acoes">
-      <ng-template pTemplate="header" hidden>
-      </ng-template>
-    </p-editor>
-  </div>
-  <div class="dados-parceiro razao-social item">
-    <h2 class="mr-2 mb-5">
-      <i class="pi pi-camera"></i>
-      {{'newNC.review.evidence'| translate}}
-    </h2>
-    <p-carousel [value]="this.aboutSrvc.nc?.attachments?.filter(isType2) || []" [numVisible]="3" [numScroll]="3" [showIndicators]="false">
-      <ng-template let-file pTemplate="item">
-        <button (click)="visualizarDocumento(file.id,file.type)">
-        <i class="bi bi-file-earmark fs-1"></i>
-        <p>{{file.name||"file.txt"}}</p>
-        </button>
-      </ng-template>
-    </p-carousel>
-  </div>
-</div>
+        <div class="dados-parceiro razao-social item">
+          <h2 class="mr-2">
+            <i class="bi bi-geo"></i>
+            {{ "newNC.step2.actionsTitle" | translate }}
+          </h2>
+          <p-editor
+            [style]="{
+              height: '144px',
+              border: '1px solid #dddddd',
+              'font-size': '20px'
+            }"
+            [readonly]="true"
+            [ngModel]="aboutSrvc.nc?.text_area_acoes"
+          >
+            <ng-template pTemplate="header" hidden> </ng-template>
+          </p-editor>
+        </div>
+        <div class="dados-parceiro razao-social item">
+          <h2 class="mr-2 mb-5">
+            <i class="pi pi-camera"></i>
+            {{ "newNC.review.evidence" | translate }}
+          </h2>
+          <p-carousel
+            [value]="this.aboutSrvc.nc?.attachments?.filter(isType2) || []"
+            [numVisible]="3"
+            [numScroll]="3"
+            [showIndicators]="false"
+          >
+            <ng-template let-file pTemplate="item">
+              <button (click)="visualizarDocumento(file.id, file.type)">
+                <i class="bi bi-file-earmark fs-1"></i>
+                <p>{{ file.name || "file.txt" }}</p>
+              </button>
+            </ng-template>
+          </p-carousel>
+        </div>
+      </div>
     </ng-template>
   </p-accordionTab>
   <p-accordionTab [selected]="isAllOpen">
@@ -125,7 +144,7 @@
       <div class="d-flex justify-content-between accordion">
         <p>
           <i class="bi bi-file-earmark-text"></i>
-          {{'global.contacts.notifications'| translate}}
+          {{ "global.contacts.notifications" | translate }}
         </p>
       </div>
     </ng-template>
