Feito primeira parte do teste de revisão 18-07

--- a/src/app/pages/ncs/about/view-nc/view-nc.component.css
+++ b/src/app/pages/ncs/about/view-nc/view-nc.component.css
@@ -131,3 +131,12 @@ h2 {
 h2{
     font-size: 24;
 }
+
+.selected-btn {
+    background-color: #00344D;
+    color: #fff;
+}
+.unselected-btn {
+    border-color: #00344D;
+    color:#00344D;
+}
