--- a/src/app/pages/ncs/create/ncs-create-header/cancel-dialog/cancel-dialog.component.html
+++ b/src/app/pages/ncs/create/ncs-create-header/cancel-dialog/cancel-dialog.component.html
@@ -1,5 +1,5 @@
 <p>{{'cancelNC.title'| translate}}</p>
 <div class="d-flex justify-content-between mt-5">
     <button class="btn btn-primary" (click)="cancelarNc()" style="background-color: #00344D;">{{'cancelNC.accept'| translate}}</button>
-    <button class="btn btn-outline-warning" (click)="voltar()">{{'newNC.reject'| translate}}</button>
+    <button class="btn btn-outline-warning" (click)="voltar()">{{'global.reject'| translate}}</button>
 </div>
