--- a/src/app/pages/ncs/sgq-evaluation/steps/evidence/evidence.component.html
+++ b/src/app/pages/ncs/sgq-evaluation/steps/evidence/evidence.component.html
@@ -15,7 +15,7 @@
     <div id="counterEv" class="text-end">0</div>
   </div>
   <div class="div-attachment">
-    <h1>{{ "about.costsComponent.attachSubtitle" | translate }}</h1>
+    <h1>{{ "about.costsComponent.evidenceSolution" | translate }}</h1>
     <div class="white-background" *ngIf="sgqServ.sgq.attachments.length == 0">
       <input
               type="file"
