--- a/src/app/pages/ncs/create/ncs-create-header/ncs-create-header.component.css
+++ b/src/app/pages/ncs/create/ncs-create-header/ncs-create-header.component.css
@@ -18,6 +18,16 @@
   font-size: 24px;
   white-space: nowrap;
 }
+.cancel-btn {
+  border: 2px solid  #B48C28;
+  border-radius: 0.25rem;
+  color: #B48C28;
+  height: 35px;
+}
+.cancel-btn:hover {
+ color: #fff;
+ background:#B48C28;
+}
 @media screen and (max-width: 1000px) {
   .text-box {
     display: none;
