--- a/src/app/pages/ncs/create/ncs-create-header/ncs-create-header.component.html
+++ b/src/app/pages/ncs/create/ncs-create-header/ncs-create-header.component.html
@@ -12,7 +12,7 @@
   </div>
   <div class="d-flex justify-content-end p-0">
     <div class="d-flex buttons">
-      <button type="button" (click)="openCancelDialog()" class="btn btn-outline-warning mr-2" >
+      <button type="button" (click)="openCancelDialog()" class="btn cancel-btn mr-2" >
         {{'global.cancel'| translate}}
         <i class="pi pi-times"></i>
       </button>
