--- a/src/app/pages/ncs/about/view-nc/view-nc.component.html
+++ b/src/app/pages/ncs/about/view-nc/view-nc.component.html
@@ -60,7 +60,7 @@
       </div>
     </ng-template>
     <ng-template pTemplate="content">
-      <div class="div-ident-parceiro d-flex flex-wrap mt-3">
+      <div class="div-ident-parceiro d-flex  mt-3">
         <div class="dados-parceiro razao-social item">
           <h2 class="mr-2">
             <i class="bi bi-file-earmark-text"></i>
@@ -99,7 +99,7 @@
         </div>
       </div>
 
-      <div class="div-ident-parceiro d-flex flex-wrap mt-3">
+      <div class="div-ident-parceiro d-flex  mt-3">
         <div class="dados-parceiro razao-social item">
           <h2 class="mr-2">
             <i class="bi bi-geo"></i>
