--- a/src/app/pages/ncs/about/about.component.html
+++ b/src/app/pages/ncs/about/about.component.html
@@ -1,4 +1,5 @@
-<app-about-header> </app-about-header>
+<div *ngIf="aboutSrvc.isLoad">
+  <app-about-header> </app-about-header>
 
 <p-tabView (onChange)="goCreateProp($event)">
   <p-tabPanel
@@ -50,3 +51,5 @@
     </div>
   </p-tabPanel>
 </p-tabView>
+
+</div>
