--- a/src/app/pages/ncs/about/view-nc/gerar-pdf-view/gerar-pdf-view.component.html
+++ b/src/app/pages/ncs/about/view-nc/gerar-pdf-view/gerar-pdf-view.component.html
@@ -24,11 +24,10 @@
         RELATÓRIO DE NÃO CONFORMIDADE
       </div>
       <div
-        class="col-4 d-flex flex-column justify-content-between align-items-center border border-secondary p-3"
+        class="col-4 d-flex flex-column justify-content-center align-items-center border border-secondary p-3"
       >
-        <span>PR-XXX-XXX</span>
-        <span>REVISÃO: XX</span>
-        <span>DATA: XX.XX.2021</span>
+        <span>{{aboutService.nc.code}}</span>
+        
       </div>
     </div>
   </div>
