--- a/src/app/pages/ncs/about/view-nc/products-and-points/view-products-and-points.component.html
+++ b/src/app/pages/ncs/about/view-nc/products-and-points/view-products-and-points.component.html
@@ -8,7 +8,7 @@
       </h2>
       <p-chip>
         <i class="bi bi-ticket-perforated mr-2"></i>
-        {{ aboutSrvc.nc?.product?.code || "000000" }}
+        {{ aboutSrvc.nc?.product?.code || "" }}
       </p-chip>
     </div>
     <p class="d-block">
@@ -24,7 +24,7 @@
             "newNC.step1.product.amount" | translate
           }}</span>
           <br />
-          <span class="info-dados">{{ aboutSrvc.nc?.quant_total || "0" }}</span>
+          <span class="info-dados">{{ aboutSrvc.nc?.quant_total || "" }}</span>
         </div>
       </div>
       <div class="contato-info d-flex flex-row">
@@ -34,7 +34,7 @@
             "newNC.step1.product.amountNC" | translate
           }}</span>
           <br />
-          <span class="info-dados">{{ aboutSrvc.nc?.quant_nc || "0" }}</span>
+          <span class="info-dados">{{ aboutSrvc.nc?.quant_nc || "" }}</span>
         </div>
       </div>
       <div class="contato-info d-flex flex-row">
@@ -44,7 +44,7 @@
             "newNC.step1.product.percent" | translate
           }}</span>
           <br />
-          <span class="info-dados">{{ getPercent() || "0" }}%</span>
+          <span class="info-dados">{{ getPercent() || "" }}%</span>
         </div>
       </div>
     </div>
@@ -64,24 +64,24 @@
         }}</span>
         <div class="d-flex flex-row mt-2">
           <span class="info-dados">{{
-            aboutSrvc.nc?.procedure?.code || "0"
+            aboutSrvc.nc?.procedure?.code || ""
           }}</span>
 
           <span class="info-dados ml-3">{{
-            aboutSrvc.nc?.procedure?.description || "0"
+            aboutSrvc.nc?.procedure?.description || ""
           }}</span>
 
           <span class="info-dados ml-3">{{
-            aboutSrvc.nc?.procedure?.rev || "0"
+            aboutSrvc.nc?.procedure?.rev || ""
           }}</span>
         </div>
       </div>
     </div>
     <div
-      class="dados-parceiro razao-social item mt-3"
+      class="dados-parceiro razao-social item"
       *ngIf="returnFile('pontoControle').length > 0"
     >
-      <h2 class="mr-2 mb-5">
+      <h2 class="mr-2 mb-3">
         <i class="bi bi-paperclip"></i>
         {{ "global.fileInput.attachments" | translate }}
       </h2>
@@ -125,7 +125,7 @@
           "newNC.step1.rejectionPoint.numBatch" | translate
         }}</span>
         <br />
-        <span class="info-dados">{{ aboutSrvc.nc?.num_lote || "0" }}</span>
+        <span class="info-dados">{{ aboutSrvc.nc?.num_lote || "" }}</span>
       </div>
     </div>
     <div
@@ -139,7 +139,7 @@
         }}</span>
         <br />
         <span class="info-dados">{{
-          aboutSrvc.nc?.num_ordem_compra || "0"
+          aboutSrvc.nc?.num_ordem_compra || ""
         }}</span>
       </div>
     </div>
@@ -153,15 +153,15 @@
         <br />
         <div class="d-flex flex-row mt-2">
           <span class="info-dados">{{
-            aboutSrvc.nc?.instruction?.code || "0"
+            aboutSrvc.nc?.instruction?.code || ""
           }}</span>
 
           <span class="info-dados ml-3">{{
-            aboutSrvc.nc?.instruction?.description || "0"
+            aboutSrvc.nc?.instruction?.description || ""
           }}</span>
 
           <span class="info-dados ml-3">{{
-            aboutSrvc.nc?.instruction?.rev || "0"
+            aboutSrvc.nc?.instruction?.rev || ""
           }}</span>
         </div>
       </div>
