--- a/src/app/pages/ncs/create/steps/step2/product/product-info/product-info.component.html
+++ b/src/app/pages/ncs/create/steps/step2/product/product-info/product-info.component.html
@@ -1,5 +1,8 @@
 <div *ngIf="!nonComplianceService.hasProduct()" class="mt-1">
-  <app-waiting-product titleFigure="Aguardando dados do produto" [isImg1]="false"></app-waiting-product>
+  <app-waiting-product
+    titleFigure="Aguardando dados do produto"
+    [isImg1]="false"
+  ></app-waiting-product>
 </div>
 <div *ngIf="nonComplianceService.hasProduct()">
   <div class="product-info mt-1">
@@ -15,30 +18,39 @@
         {{ nonComplianceService.nc.product.description }}
       </p>
     </div>
-    <div class="d-flex my-3 product-box p-3 ">
-      <div class="d-flex flex-column inputs-sm mt-3 col-6">
-        <label for="amountNC">{{'newNC.step1.product.amountNC'| translate}} *</label>
-        <input
-                [(ngModel)]="nonComplianceService.nc.quant_nc"
-                name="amountNC"
-                type="number"
-                pInputText
-                [placeholder]="'global.type'| translate"
-                class="p-input text-sm input"
-                [disabled]="isNotApply()"
-        />
+    <div class="d-flex flex-column my-3 product-box p-3">
+      <div class="d-flex ">
+        <div class="d-flex flex-column inputs-sm mt-3 col-6">
+          <label for="amountNC"
+            >{{ "newNC.step1.product.amountNC" | translate }} *</label
+          >
+          <input
+            [(ngModel)]="nonComplianceService.nc.quant_nc"
+            name="amountNC"
+            type="number"
+            pInputText
+            [placeholder]="'global.type' | translate"
+            class="p-input text-sm input"
+            [disabled]="isNotApply()"
+          />
+        </div>
+        <div class="d-flex flex-column inputs-sm mt-3 col-6">
+          <label for="amountTotal"
+            >{{ "newNC.step1.product.amount" | translate }} *</label
+          >
+          <input
+            [(ngModel)]="nonComplianceService.nc.quant_total"
+            name="amountTotal"
+            type="number"
+            pInputText
+            [placeholder]="'global.type' | translate"
+            class="p-input text-sm input"
+            [disabled]="isNotApply()"
+          />
+        </div>
       </div>
-      <div class="d-flex flex-column inputs-sm mt-3 col-6">
-        <label for="amountTotal">{{'newNC.step1.product.amount'| translate}} *</label>
-        <input
-                [(ngModel)]="nonComplianceService.nc.quant_total"
-                name="amountTotal"
-                type="number"
-                pInputText
-                [placeholder]="'global.type'| translate"
-                class="p-input text-sm input"
-                [disabled]="isNotApply()"
-        />
+      <div class="error-message col-6">
+        {{returnError()}}
       </div>
     </div>
   </div>
